replacing credential scope name with client scope id
Signed-off-by: Jimmy Chakkalakal <jimmy.chakkalakal@ibm.com>